# Operator-Learning

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  run_experiment.py  setup.py  wandb_config.yaml
data/: operatorlearning.py
experiments/: base.py  poisson.py  poisson.yaml
experiments/basis/: basis.py  config.yaml
experiments/deeponet/: config.yaml  deeponet.py
experiments/demo/: config.yaml  demo.py  other.yaml  side.config.json  side.py
experiments/fno/: config.yaml  fno.py
experiments/fno_demo/: config.yaml  fno_demo.py
experiments/fourier_feature_test/: config.yaml  fourier_feature_test.py
experiments/gnot/: config.yaml  gnot.py
experiments/mfear/: config.yaml  mfear.py  stacked_basis.yaml  test_integrator.config.yaml  test_integrator.py
experiments/pcanet/: config.yaml  pcanet.py  visualize_bases.config.yaml  visualize_bases.py
experiments/poisson_generate/: config.yaml  generate_dataset.py  poisson_generate.py
experiments/shift_deeponet/: config.yaml  shift_deeponet.py
experiments/test_differentiator/: config.yaml  test_differentiator.py
experiments/test_loss/: config.yaml  test_loss.py
models/: __init__.py  base.py  deeponet.py  fno.py  hyper_deeponet.py  shift_deeponet.py
models/deeponet/: base.py
modules/: __init__.py  base.py  deeponet.py  hyper_deeponet.py  shift_deeponet.py  standard.py
operatorlearning/: __init__.py  function.py
tests/: test_function.py  test_oldataset.py  test_same_rep_batch_sampler.py  test_visualize.py
utils/: __init__.py  activation.py  config.py  loss.py  optim.py
(+43 files in other folders)
