[build-system]
requires = [
    "setuptools",
    "wheel",
    "toml"
]
build-backend = "setuptools.build_meta"

[project]
name = "operatorlearning"
authors = [{name = "Jacob Hauck", email = "jacobh15@yahoo.com"}]
description = "Operator learning toolkit"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3"
]
version = "1.0.0"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["experiments*"]
